methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:22: error: not found: value reculer
    reculer(4);
    ^