methods.picture.PatternPicture.scala.code
override def run() {
  for (k<-1 to 2) {

    for (j<-1 to 2) {

      motif1(Color.RED)
      avance(2);
      motif2(Color.BLUE)
      recule(2);
      gauche();
      avance(2);
      droite();
      motif2(Color.YELLOW)
      avance(2);
      motif1(Color.GREEN)
      recule(2);
      gauche();
      recule(2);
      droite();
      avance(4);
    }
    reculer(4);
    gauche();
    avance(4);
  }

}
def motif1(c:Color) {
  setCouleurBrosse(c)
  avance();
  baisseBrosse();
  leveBrosse();
  gauche();
  avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
  gauche();
  avance();
  gauche();
}
def motif2(c:Color) {
  setCouleurBrosse(c)
  baisseBrosse();
  leveBrosse();
  avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
  gauche();
  avance();
  gauche();
  avance();
  gauche();
}